# c-vc-game

./: .gitignore  .gitmodules  .vimspector.json  CMakeLists.txt  CONVENTIONS.md  Makefile  Makefile.win  README.md  block.c  build.bat  coc-settings.json  coding-style.txt  collision-util.h  collision.c  collision.h  compile_commands.json  compile_flags.txt  core.c  core.h  defs.h  entity.h  game.c  game_old.c  grid-map-util.h  grid-map.h  kd-tree.c  kd-tree.h  kdtree.c  kdtree.h  linked-list.c  linked-list.h  linkedlist.c  linkedlist.h  main.c  massif.out.29272  object.h  objects.h  player.c  primitives.c  primitives.h  (+27 more)
engine/: Makefile
engine/data/: kdtree.h
engine/entity/system/: system.c
engine/gfx/: render.h  vao.h
engine/state/: game.h  state.c
engine/system/: input.c
engine/util/: color.h  log.c
engine/world/: chunk.c
engine/world/tile/: tile.h
include/vcp/: vcp.h
include/vcp/_internal/: linear_algebra.h  linear_algebra_end.h  linear_algebra_start.h  linear_algebra_template.h
lib/: Makefile
lib/glad/src/: glad.c
res/shaders/: 2d.frag  2d.vert  frag.glsl  instancing.vert  simple.frag  simple.vert  vert.glsl
res/shaders/raytracer/: frag.glsl  frag.h  fragt.h  vert.glsl  vert.h
scripts/: run.sh
src/: audio.c  clock.c  common.h  input.c  internal.c  internal.h  log.c  main.c  math.c  platform.c  platform.h  time.c  timestep.c  vcp.h  vcp_common.h  vcp_version.h  window.c  window.h
src/collection/: list.h
src/common/: common.h
src/common/graphics/: mesh.c
src/common/math/: color.h  matrix.h  quat.h  vector.h
src/common/system/: global.h  input.c  system.c  time.c  time.h  timestep.h  window.c  window.h
src/common/util/: camera.c  camera.h  types.h  util.h
src/data/: collision-graph.c  collision-graph.h  list.h  vector.c  vector.h
src/data-struct/: vector.c
src/engine/entity/: ecs.h
src/engine/gfx/: camera.c  camera.h  color.h  gfx.h  mesh.c  mesh.h  obj3d.c  obj3d.h  render.c  render.h  shader.c  shader.h  shape.h  vao.c  window.c  window.h
src/engine/graphics/: camera.c  camera.h  gfx.h  mesh.c  mesh.h  shader.c  vao.c
src/engine/state/: app.c  app.h  state.h
src/engine/system/: app.c  app.h  core-internal.h  core.c  core.h  input.c  input.h  system.c  system.h  time.h  window.c  window.h
src/engine/util/: app.c  app.h  camera.c  camera.h  fmath.h  kdtree.h  list.h  mat4.h  quat.h  state.h  types.h  util.h  vec2.h  vec3.h  vec4.h
src/entity/: camera.c  camera.h  control.c  control.h  ecs-components.h  ecs.c  ecs.h  entity.h  movement.c  movement.h  physics.c  physics.h  position.c  position.h
src/entity/component/: component.h
src/framework/graphics/: gfx.h  mesh.c  shader.c  shader.h  vao.h  vbo.c  vbo.h
src/framework/system/: app.c  app.h  core-internal.h  core.c  input.c  system.c  system.h  window.c  window.h
src/framework/util/: camera.c  ecs.c  linkedlist.h  list.h  mat4.h  math.h
src/game/: CelestialBody.cc  CelestialBody.h  Entity.h  Game.cc  Game.h  Player.h  Renderer.cc  Renderer.h  Ship.h  SpaceObject.cc  SpaceObject.h  game.c  game.cc  game.h  gameoflife.h  main.cc  main.h  raytracer.h  ship.h  testbed.h
src/game/Testing/: cube.h  gameoflife.h  headless.h
src/game/World/: Chunk.h  Object.cc  Object.h  Planet.h  SpaceObject.cc  SpaceObject.h  Tile.h
src/game/ex/: cube.h  dragon.h  gameoflife.h  headless.h  terrain.h
src/gfx/: camera.c  color.h  draw.c  draw.h  obj3d.c  obj3d.h  render.c  render.h  shader.c  shader.h  vbo.c  vbo.h  window.c  window.h
src/graphics/: shader.c  shader.h  vao.c  vao.h  vbo.c  vbo.h
src/input/: input.c  input.h
src/lib/: lib.h
src/lib/graphics/: gfx.h  shader.c  vao.h
src/lib/math/: math.h  matrix.h  quat.h  vector.h
src/lib/system/: app.c  core.c  core.h  global.h  input.c  input.h  system.c  system.h  time.c  time.h  timestep.h  window.c  window.h
src/lib/util/: camera.h  color.h  log.h
src/math/: color.h  mat4.h  math.c  math.h  matrix.h  quat.h  vec2.h  vec3.h  vec4.h
src/math/float32/: color_f32.h  mat4_f32.h  math_f32.h  quat_f32.h  vec2_f32.h  vec3_f32.h  vec4_f32.h
src/math/float64/: mat4_f64.h  math_f64.h  quat_f64.h  vec2_f64.h  vec3_f64.h  vec4_f64.h
src/math/int32/: mat4_i32.h  quat_i32.h  vec2_i32.h  vec3_i32.h  vec4_i32.h
src/math/int64/: mat4_i64.h  quat_i64.h  vec2_i64.h  vec3_i64.h  vec4_i64.h
src/math/template/: _linear_algebra_define.h  _linear_algebra_end.h  _linear_algebra_start.h  _linear_algebra_template.h  _vec2_float_template.h  _vec2_int_template.h
src/state/: collision-state.c  collision-state.h  game.c  game.h  state.c  state.h
src/system/: allocator.c  allocator.h  audio.c  audio.h  global.h  input.c  input.h  system.c  system.h  time.c  time.h  timestep.h  window.c  window.h
src/tile/: air.c  cobblestone.c  dirt.c  grass.c  lava.c  mud.c  sand.c  stone.c  tile.c  tile.h  water.c
src/tile/floor/: air.c  dirt.c  grass.c  mud.c  sand.c  stone.c
src/tile/level/: cobblestone.c
src/tile/liquid/: lava.c  water.c
src/util/: bitflag.h  camera.c  camera.h  color.c  color.h  fmath.c  fmath.h  input.c  input.h  kdtree.c  kdtree.h  list.h  log.c  log.h  shape.h  tcast.h  timestep.c  timestep.h  typecast.h  types.h  util.h  window.c  window.h
src/world/: chunk.c  chunk.h  generate.h  world.c  world.h
src/world/generate/: generate.c
src/world/tile/: air.c  cobblestone.c  dirt.c  grass.c  lava.c  mud.c  sand.c  stone.c  tile.c  tile.h  water.c
test/: Makefile  const-test.c  index-test.c  name-test.c  nametest  test  test-all.c  test-mesh.c  test-util.c  test-vec2.c  test_all.c  test_dynarr.c  test_kdtree.c  test_list.c  test_mesh.c  test_obj3d.c  test_util.c  test_vector.c
tests/: test-all.c  test-clock.c  test-mat4.c  test-quat.c  test-timestep.c  test-vec3.c
vce/data/: dynarr.h
vce/gfx/: camera.c  camera.h  obj3d.h  render.c  shader.c  shader.h  vbo.h  window.c  window.h
vce/state/: app.c  app.h  stage.c  stage.h  state.c  state.h
vce/system/: input.h  system.c  system.h
vce/util/: dynarr.h  fmath.h  shape.h  util.h
vce/world/: world.h
vcg/: Makefile  main.c  main.cc
(+8 files in other folders)
